{{$NEXT}}

0.06 Mon. Apr. 15, 2013

    - Language and character set negotiation now canonicalize all values. This
      means that if you say you provide "UTF-8" and a client requests "utf8"
      it will just work. (Dave Rolsky)
    - There are two new classes, HTTP::Headers::ActionPackage::AcceptCharset
      and AcceptLanguage. (Dave Rolsky)
    - If an Accept-Charset header does not contain "*" or "ISO-8859-1", then
      "ISO-8859-1" is given a priority of 1.0, per RFC-2616. (Dave Rolsky)
    - Content negotiation will never return any item explicitly forbidden
      ("q=0.0") in the headers, even if the header says it accepts "*" or that
      item is specified as a default in your code. (Dave Rolsky)
    - The HTTP::Headers::ActionPack->inflate method now works with
      Web::Request object. (Jesse Luehrs)
    - Fix tests that were broken in the absence of
      HTTP::Message::PSGI. (Florian Ragwitz)

0.05 Mon. Nov. 26th, 2012
    - fixed the HTTP::Message::PSGI errors
    - when you inflate a header object that has already 
      been inflated, ignore that header and keep looping
        - thanks to Florian Ragwitz for spoting this

0.04 Sun. Sept. 9th, 2012
    - pulling the content negotiation out of
      Web::Machine and moving it into here
        - adding tests accordingly

0.03 Tues. June 19th, 2012
    - make sure everything has $VERSION numbers

0.02 Sun. June 17th, 2012
    - forgot to add some dependencies

0.01 Tues. June 12th, 2012
    - First release